2008-10-26  Sebastien Pouliot  <sebastien@ximian.com>

	* MarkAssemblyWithAssemblyVersionTest.cs: New. Unit tests for
	MarkAssemblyWithAssemblyVersionRule.
	* MarkAssemblyWithCLSCompliantTest.cs: New. Unit tests for
	MarkAssemblyWithCLSCompliantRule.
	* MarkAssemblyWithComVisibleTest.cs: New. Unit tests for
	MarkAssemblyWithComVisibleRule.
	* DisposableFieldsShouldBeDisposedTest.cs: Moved to Correctness
	since this is not (API) design.
	* Test.Rules.Design.mdp: Add new tests and remove the moved test
	from the MD project file.

2008-10-24  Sebastien Pouliot  <sebastien@ximian.com>

	* PreferEventsOverMethodsTest.cs: New. Unit tests for 
	PreferEventsOverMethodsRule

2008-10-19  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidMultidimensionalIndexerTest.cs: Fix namespace.
	* AvoidSmallNamespaceTest.cs: New. Unit tests for 
	AvoidSmallNamespaceRule.
	* AvoidVisibleNestedTypesTest.cs: Fix namespace.
	* InternalNamespacesShouldNotExposeTypesTest.cs: New. Unit tests for
	InternalNamespacesShouldNotExposeTypesRule.
	* PreferIntegerOrStringForIndexersTest.cs: Fix namespace.
	* Test.Rules.Design.mdp: Add new test to MD project file.

2008-10-06  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidVisibleNestedTypesTest.cs: Remove unneeded 'using' clauses.
	* ConsiderConvertingFieldToNullableTest.cs: Remove unneeded 'using' 
	clauses.
	* ConsiderConvertingMethodToPropertyTest.cs: Add more coverage. 
	Remove unneeded 'using' clauses.
	* ConsiderUsingStaticTypeTest.cs: Add more coverage.
	* DeclareEventHandlersCorrectlyTest.cs: Add more coverage. Remove 
	unneeded 'using' clauses.

2008-10-05  Sebastien Pouliot  <sebastien@ximian.com>

	* DisposableFieldsShouldBeDisposedTest.cs:  Add more coverage.
	* DisposableTypesShouldHaveFinalizerTest.cs: Use new, shorter, 
	syntax for tests. Remove unneeded 'using' clauses.
	* DoNotDeclareVirtualMethodsInSealedTypeTest.cs: New. Unit tests 
	for DoNotDeclareVirtualMethodsInSealedTypeRule.