@@ -1,3 +1,12 @@
+2008-10-27  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* FinalizersShouldBeProtectedTest.cs: Updated not to depend on
+	another (moved) test type definition.
+	* FinalizersShouldCallBaseClassFinalizerTest.cs: Moved to 
+	Correctness since this is not (API) design.
+	* Test.Rules.Design.mdp: remove the moved test from the MD project 
+	file.
+
 2008-10-26  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* MarkAssemblyWithAssemblyVersionTest.cs: New. Unit tests for
